# chattingService

client/: Cargo.toml
client/src/: main.rs  websocket_function.rs
client/src/app/: app_control.rs  appstate.rs  connected_room.rs  disconnected_room.rs  mod.rs
client/src/app/widget/: big_rectangle.rs  display_text_box.rs  filling_buttons.rs  messages.rs  mod.rs
client/src/response/: mod.rs
server/: Cargo.toml
server/src/: dto.rs  main.rs  message.rs
server/src/roomwebserver/: controller.rs  mod.rs  server.rs
server/src/user/: mod.rs
