[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = {version = "1.48.0", features = ["full"]}
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
futures-util = "0.3.31"
serde_json = {version = "1.0.146"}
serde = {version = "1.0.228",  features = ["alloc", "default", "derive", "rc", "std"]}
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
